@@ -13,6 +13,7 @@ ctags-NEXT (Wed Oct 11 2006)
   definitions.
 * Added support for Perl subroutine declarations (off by default).
 * Don't mistake fully qualified function call as a label (Perl).
+* Added support for Perl's formats.
 
 ctags-5.6 (Mon May 29 2006)
 * Reformatted code for independence of tab stop setting.
